bridge/base/0-f1-dash-main-namespace.yaml
#! 0-f1-dash-main-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: f1-dash-main
    labels:
        com.docker.compose.project: f1-dash-main
