bridge/base/realtime-deployment.yaml
#! realtime-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: realtime
    namespace: f1-dash-main
    labels:
        com.docker.compose.project: f1-dash-main
        com.docker.compose.service: realtime
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: f1-dash-main
            com.docker.compose.service: realtime
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: f1-dash-main
                com.docker.compose.service: realtime
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: realtime
                  image: ghcr.io/slowlydev/f1-dash-realtime:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: realtime-80
                      containerPort: 80
