bridge/base/api-expose.yaml
#! api-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api
    namespace: Blackboxf1-main
    labels:
        com.docker.compose.project: Blackboxf1-main
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: Blackboxf1-main
        com.docker.compose.service: api
    ports:
        - name: api-80
          port: 80
          targetPort: api-80
