bridge/base/api-service.yaml
# check if there is at least one published port

#! api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-published
    namespace: Blackboxf1-main
    labels:
        com.docker.compose.project: Blackboxf1-main
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: Blackboxf1-main
        com.docker.compose.service: api
    ports:
        - name: api-4010
          port: 4010
          protocol: TCP
          targetPort: api-80

# check if there is at least one published port
