bridge/base/realtime-expose.yaml
#! realtime-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: realtime
    namespace: Blackboxf1-main
    labels:
        com.docker.compose.project: Blackboxf1-main
        com.docker.compose.service: realtime
spec:
    selector:
        com.docker.compose.project: Blackboxf1-main
        com.docker.compose.service: realtime
    ports:
        - name: realtime-80
          port: 80
          targetPort: realtime-80
