bridge/base/web-expose.yaml
#! web-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: web
    namespace: f1-dash-main
    labels:
        com.docker.compose.project: f1-dash-main
        com.docker.compose.service: web
spec:
    selector:
        com.docker.compose.project: f1-dash-main
        com.docker.compose.service: web
    ports:
        - name: web-3000
          port: 3000
          targetPort: web-3000
